--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.container{
+    max-width: 1280px;
+    width: 100%;
+    margin: auto; 
+}
+
+h1,h2,h3,h4,h5{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
+.flex{
+    display: flex;
+}
+
+.column{
+    flex-flow: column;
+}
+
+.h-100  {
+    height: 100vh;
+}
+
+.padding-y-2 {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.padding-y-4 {
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+
+.center-v {
+    justify-content: center;
+    align-items: center;
+}
+
+.center-h{
+    justify-content: center;
+}
+
+ 
