--- a/src/app/pages/todo-list-page/todo-list-page.component.html
+++ b/src/app/pages/todo-list-page/todo-list-page.component.html
@@ -19,8 +19,8 @@
       </button>
     </mat-toolbar>
   </div>
-  <div class="flex">
-    <h3>Filtrar tareas</h3>
+  <div class="flex filter-content">
+    <h3>Filtrar tareas</h3> 
     <button mat-raised-button (click)="filterTasks('all')">Todas</button>
     <button mat-raised-button (click)="filterTasks('completed')">
       Completadas
