--- a/src/app/pages/todo-list-page/todo-list-page.component.scss
+++ b/src/app/pages/todo-list-page/todo-list-page.component.scss
@@ -1,3 +1,13 @@
 .example-spacer {
     flex: 1 1 auto;
 }
+
+.filter-content{ 
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    h3{
+        line-height: 20px;
+        margin: 0 0 0 0 !important
+    }
+}
